@@ -102,12 +102,16 @@ v \- show/hide vertices, toggle display of vertex spheres
 e \- show/hide edges, toggle display of edge rods
 f \- show/hide faces, toggle display of faces
 n \- show/hide vertex numbers, toggle display of vertex number labels
-n \- show/hide face numbers, toggle display of face number labels
+N \- show/hide face numbers, toggle display of face number labels
 m \- show/hide edge numbers, toggle display of edge number labels
 t \- show/hide transparency, toggle display of any transparency
 y \- rotate through display of symmetry elements: axes; axes and
 .IP
 mirrors; axes, mirrors and rot\-reflection planes; none
+.IP
+O \- show/hide orientation, toggle colouring of the front side of
+.IP
+faces white and the back side black
 .IP
 r \- reset, reset to the initial viewing options
 Q \- Quit
