@@ -87,11 +87,13 @@ void vw_opts::usage()
 "   e - show/hide edges, toggle display of edge rods\n"
 "   f - show/hide faces, toggle display of faces\n"
 "   n - show/hide vertex numbers, toggle display of vertex number labels\n"
-"   n - show/hide face numbers, toggle display of face number labels\n"
+"   N - show/hide face numbers, toggle display of face number labels\n"
 "   m - show/hide edge numbers, toggle display of edge number labels\n"
 "   t - show/hide transparency, toggle display of any transparency\n"
 "   y - rotate through display of symmetry elements: axes; axes and\n"
 "       mirrors; axes, mirrors and rot-reflection planes; none\n"
+"   O - show/hide orientation, toggle colouring of the front side of \n"
+"       faces white and the back side black\n"
 "   r - reset, reset to the initial viewing options \n"
 "   Q - Quit\n"
 "\n"
