@@ -17,8 +17,11 @@ xx-xx-14 Adrian Rossiter <adrian@antiprism.com>
             leonardo: orient models, new options -c centre, -p panel faces,
               -k don't orient
             zono: new option -S zonish polyhedra
+            off_normals: options -t and -m removed
+            antiview: 'O' to show orientation.
          Fixes
             off_util -u: natural unfolding for positive orientation
+            off_align: fix crashes
             off2pov: fix compatibility with POV-Ray 3.7
             minor bug fixes
 
